--- a/public/app.css
+++ b/public/app.css
@@ -33,7 +33,7 @@ article + article {
 }
 
 .navBtn {
-    background-color: #4CAF50; /* Green */
+    background-color: #1a202c; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -43,6 +43,11 @@ article + article {
     font-size: 16px;
 }
 
+a.navBtn:hover{
+    color:#000000;
+    background-color:#718096;
+}
+
 .nav {
     display: block;
     margin-left: auto;
@@ -50,3 +55,21 @@ article + article {
     width: 100%;
     background-color: #4a5568;
 }
+
+a.button1{
+    display:inline-block;
+    padding:0.35em 1.2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:darkgreen;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+a.button1:hover{
+    color:#000000;
+    background-color:#FFFFFF;
+}
+
