--- a/public/app.css
+++ b/public/app.css
@@ -1,9 +1,13 @@
 body {
     background: white;
     color: #222222;
-    max-width: 600px;
+    max-width: 1000px;
     margin: auto;
     font-family: sans-serif;
+}
+
+img {
+    max-width: 450px;
 }
 
 p {
