--- a/public/app.css
+++ b/public/app.css
@@ -185,3 +185,14 @@ a.button1:hover{
 .dropdown:hover .dropbtn {
     background-color: #4a5568;
 }
+
+.profile-image {
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
